Fixing spacing issue

--- a/main.css
+++ b/main.css
@@ -153,7 +153,6 @@ p {
     padding: 0;
     margin: -2rem calc(0px - (50vw - 50%)) 2rem;
     padding-left: calc(50vw - 50%);
-    padding-right: calc(50vw - 50%);
     height: 1%;
 }
 
